# git_binance_trader

./: .env.example  .gitignore  API.txt  CHANGELOG.md  Dockerfile  PROJECT_MEMORY.md  README.md  VERSION  a_stock.txt  fly.toml  mission.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/agents/: binance-sim-guard.agent.md
.github/workflows/: ai-governance-ci.yml
ai_trader_project/: .env.example  AUTONOMY_IMPLEMENTATION_CHECKLIST.md  CHANGELOG.md  Dockerfile  PROJECT_MEMORY.md  README.md  _fix_prices.py  fly.toml  pyproject.toml
ai_trader_project/docs/: AUDIT_LOG_SPEC.md  BRANCH_PROTECTION_RULES.md  ORCHESTRATION_DECISION.md  PERMISSION_MATRIX.md
ai_trader_project/docs/report_templates/: backtest-report-template.md  candidate-scoreboard-template.md  stress-test-report-template.md
ai_trader_project/memory/: ai-memory.jsonl  human-commands.jsonl
ai_trader_project/src/ai_trader_project/: config.py  engine.py  main.py  market_universe.py  memory.py  models.py  orchestrator_prefect.py
ai_trader_project/src/ai_trader_project/web/: dashboard.py
ai_trader_project/tests/: test_api.py
scripts/: release_update.ps1
src/git_binance_trader/: __init__.py  config.py  main.py
src/git_binance_trader/api/: routes.py
src/git_binance_trader/core/: exchange.py  models.py  risk.py  strategy.py
src/git_binance_trader/services/: binance_market_data.py  history.py  logging_setup.py  orchestrator.py  reporter.py
src/git_binance_trader/web/: dashboard.py
tests/: test_api.py  test_data_integrity.py  test_exchange.py  test_orchestrator.py  test_risk.py
