[project]
name = "git-binance-trader-ai"
version = "0.1.14"
description = "独立AI治理模拟交易项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]
orchestrator = ["prefect>=2.16.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
